--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.7",
     "firebase": "^10.9.0",
     "react": "^18.2.0",
